crates/tui/tests/storybook/snapshots/app_message__user_message_block_multiline_chrome.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---

 let's plan this out.
 step 1: parse
 step 2: render
 step 3: ship

  tip ctrl+enter / ctrl+q, steer the current re…
──────────────────────────────────────────────────

──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
