crates/tui/tests/storybook/snapshots/app_message__user_message_block_single_line.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---

 refactor the parser into its own module

  tip ctrl+enter / ctrl+q, steer the current re…
──────────────────────────────────────────────────

──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
